# fasttext-langdetect

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml
ftlangdetect/: detect.py
src/ftlangdetect/: __init__.py  detect.py
tests/: test_detect.py  test_download.py
